adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut expedita accusamus mollitia harum atque! Voluptate neque amet sed consequatur inventore recusandae deleniti excepturi quo dolor. Vel quasi optio dignissimos doloremque.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias harum ducimus fuga perspiciatis. Soluta cupiditate dignissimos ea itaque quam quidem temporibus sunt commodi quasi ad! Maxime ad magnam rerum sequi.</p>
 </body>
 </html>
